[package]
name = "solasm"
version = "0.1.0"
authors = ["g. nicholas d'andrea <nick@gnidan.org>"]
build = "build.rs"

[dependencies]
clap = "2.23.1"
rustc-serialize = "0.3"
bigint = "1.0"
peg-syntax-ext = { version = "0.5.0", optional = true }

[build-dependencies]
peg = { version = "0.5" }

[lib]
name = "solasm"
doctest = false

[[bin]]
name = "solasm"
test = false
doc = false

[features]
nightly = ["peg-syntax-ext"]

[badges]
travis-ci = { repository = "gnidan/solasm" }
